<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@android:color/darker_gray"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="Login To View Your Bill"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="141dp"
        android:drawableLeft="@drawable/ic_gmail"
        android:gravity="center"
        android:hint="@string/enter_e_mail"
        android:inputType="textWebEmailAddress"
        android:padding="10dp"
        android:background="@android:color/white"
        />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:gravity="center"
        android:background="@android:color/white"
        android:padding="10dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="175dp"
        android:text="@string/login"

        />


</RelativeLayout>